# baq_test

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: Promote_script.yaml  ml_workflow.yaml  test.yml
configs/: config.yaml
docs/: pull_request_template.md  template_pipeline.md
src/baq/: run.py
src/baq/app/: api.py  mainAPI.py  utilsAPI.py
src/baq/core/: evaluation.py  inference.py
src/baq/data/: processing.py  utils.py
src/baq/libs/evaluators/: model_evaluator.py
src/baq/libs/models/: model_trainer.py
src/baq/libs/processors/: data_processor.py
src/baq/libs/utils/: config_loader.py  mlflow_tracker.py  utilspredict.py
src/baq/models/: example_trainer.py
src/baq/pipelines/: iris_classification_pipeline.py  training_pipeline.py
src/baq/script/: script.yaml  temp.py
src/baq/steps/: data_loading.py  evaluate.py  iris_classification_step.py  load_data.py  monitoring_report.py  process.py  save_artifacts.py  train.py
src/baq/utils/: artifacts.py
