[project]
name = "bangkok-air-quality-forecasting-and-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chogerlate", email = "siwaratlaopromger4444@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.10.5",
    "dvc>=3.59.1",
    "mlflow>=2.21.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baq"]

[dependency-groups]
lint = []
dev = [
    "pytest>=8.3.5",
]

